広告の配置

--- a/index.html
+++ b/index.html
@@ -265,6 +265,37 @@
             color: var(--primary-color);
         }
 
+        /* 広告エリア */
+        .ad-container {
+            margin: 30px 0;
+            text-align: center;
+        }
+
+        .ad-label {
+            font-size: 12px;
+            color: var(--text-light);
+            margin-bottom: 8px;
+            text-align: center;
+        }
+
+        .ad-space {
+            width: 100%;
+            max-width: 728px;
+            min-height: 90px;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* スマホ用の広告サイズ */
+        @media (max-width: 768px) {
+            .ad-space {
+                max-width: 320px;
+                min-height: 100px;
+            }
+        }
+
         @media (max-width: 768px) {
             .container {
                 padding: 15px;
@@ -314,6 +345,22 @@
                 </div>
             </div>
 
+            <!-- 広告1: 変換結果の下 -->
+            <div class="ad-container" id="ad1">
+                <div class="ad-label">広告</div>
+                <div class="ad-space">
+                    <!-- 忍者AdMaxのコードをここに貼り付けてください -->
+                    <div style="text-align: center; padding: 20px; background: #f5f5f5; border-radius: 8px; color: #999; width: 100%;">
+                        <!-- admax -->
+                        <div class="admax-switch" data-admax-id="b3d19784b506c1487b00768aed7a8a20" style="display:inline-block;"></div>
+                        <script type="text/javascript">
+                        (admaxads = window.admaxads || []).push({admax_id: "b3d19784b506c1487b00768aed7a8a20",type: "switch"});</script>
+                        <script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+                        <!-- admax -->
+                    </div>
+                </div>
+            </div>
+
             <div class="info-section">
                 <h3>🔒 プライバシーについて</h3>
                 <ul>
@@ -322,6 +369,22 @@
                     <li>個人情報(名前、メールなど)は自動的にマスキングされます</li>
                     <li>オフラインでも使えます</li>
                 </ul>
+            </div>
+
+            <!-- 広告2: フッター上 -->
+            <div class="ad-container" id="ad2">
+                <div class="ad-label">広告</div>
+                <div class="ad-space">
+                    <!-- 忍者AdMaxのコードをここに貼り付けてください -->
+                    <div style="text-align: center; padding: 20px; background: #f5f5f5; border-radius: 8px; color: #999; width: 100%;">
+                        <!-- admax -->
+                        <div class="admax-switch" data-admax-id="415645cf50ced807f7bd8ea63fc42caf" style="display:inline-block;"></div>
+                        <script type="text/javascript">
+                        (admaxads = window.admaxads || []).push({admax_id: "415645cf50ced807f7bd8ea63fc42caf",type: "switch"});</script>
+                        <script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+                        <!-- admax -->
+                    </div>
+                </div>
             </div>
         </div>
     </main>
