文言の微細な修正

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <h2>📝 今日の日記を書いてみましょう</h2>
                 <textarea 
                     id="diaryInput" 
-                    placeholder="今日あったことを、素直に書いてください。&#10;&#10;例：&#10;今日は会議でうまく話せなかった。資料も間に合わなくて焦ってしまった。でも同僚が助けてくれて、なんとか乗り切れた。&#10;&#10;※個人情報(名前、メールアドレスなど)は自動的にマスキングされます。"
+                    placeholder="今日あったことを、素直にみてください。&#10;&#10;例：&#10;今日は会議でうまく話せなかった。資料も間に合わなくて焦ってしまった。でも同僚が助けてくれて、なんとか乗り切れた。&#10;&#10;※個人情報(名前、メールアドレスなど)は自動的にマスキングされます。"
                 ></textarea>
                 <div class="char-count" id="charCount">0 / 500文字</div>
                 
