--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <meta property="og:title" content="ポジ変換 - 日記を自己肯定の言葉に変えるアプリ">
     <meta property="og:description" content="あなたの日記を、自分を褒める言葉に変えるアプリです。">
     <meta property="og:url" content="https://www.poji-henkan.sion908.tech">
-    <meta property="og:image" content="https://www.poji-henkan.sion908.tech/hero.png">
+    <meta property="og:image" content="https://www.poji-henkan.sion908.tech/img/hero.png">
     <meta property="og:site_name" content="ポジ変換">
     <!-- Twitter Cardの設定 -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ポジ変換 - 日記を自己肯定の言葉に変えるアプリ">
     <meta name="twitter:description" content="あなたの日記を、自分を褒める言葉に変えるアプリです。">
-    <meta name="twitter:image" content="https://www.poji-henkan.sion908.tech/hero.png">
+    <meta name="twitter:image" content="https://www.poji-henkan.sion908.tech/img/hero.png">
     <style>
         * {
             margin: 0;
